<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_PermIntlk" Id="{db4b598f-86de-4c97-adf9-e0d5815e795d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'global_init_slot' := '49991'}
VAR_GLOBAL CONSTANT
	EMPTY_INDICES : ARRAY[0..(Param_PermIntlk.ARRAY_SIZE-1)] OF ST_PermIntlkIndex := [(Param_Permintlk.ARRAY_SIZE -1)((Condition := TRUE, Description := ''))];
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>